Color Pallet Adjustments
Adjustments have been made to the color pallet for focused icons, alert dialogs and EditText elements so as to mirror the color pallet used in the icon created by David Mind.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,8 @@
     <color name="browseTextAccent">#999999</color>
     <color name="editor">#FFFFFF</color>
     <color name="editorText">#555555</color>
+    <color name="greenDeep">#1f2c18</color>
+    <color name="greenDark">#2b3e21</color>
+    <color name="greenPrimary">#97bf80</color>
+    <color name="greenAccent">#cbffab</color>
 </resources>
