--- a/app/src/main/res/layout/help_browser.xml
+++ b/app/src/main/res/layout/help_browser.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical" android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
     <ScrollView
         android:layout_width="wrap_content"
@@ -18,45 +19,60 @@
                 android:id="@+id/apptitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="top|center_horizontal"
+                android:layout_marginLeft="3dp"
+                android:layout_marginRight="3dp"
                 android:layout_weight="1"
                 android:text="@string/app_name"
-                android:layout_gravity="top|center_horizontal"
-                android:textSize="25sp"
-                android:layout_marginLeft="3dp"
-                android:layout_marginRight="3dp" />
+                android:textColor="@color/greenPrimary"
+                android:textSize="25sp" />
 
             <TextView
                 android:id="@+id/version"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="top|center_horizontal"
+                android:layout_marginLeft="3dp"
+                android:layout_marginRight="3dp"
                 android:layout_weight="1"
                 android:text="@string/version"
-                android:layout_gravity="top|center_horizontal"
-                android:layout_marginLeft="3dp"
-                android:layout_marginRight="3dp"/>
-
-            <TextView
-                android:id="@+id/author"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/author"
-                android:layout_gravity="top|center_horizontal"
-                android:layout_marginLeft="3dp"
-                android:layout_marginRight="3dp"/>
+                android:textColor="@color/greenPrimary" />
 
             <TextView
                 android:id="@+id/website"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="top|center_horizontal"
-                android:layout_marginBottom="21dp"
                 android:layout_marginLeft="3dp"
                 android:layout_marginRight="3dp"
                 android:layout_weight="1"
                 android:autoLink="web"
                 android:clickable="true"
-                android:text="http://1337atr.weebly.com" />
+                android:text="http://1337atr.weebly.com"
+                android:textColorLink="@color/greenAccent" />
+
+            <TextView
+                android:id="@+id/author"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="top|center_horizontal"
+                android:layout_marginLeft="3dp"
+                android:layout_marginRight="3dp"
+                android:layout_weight="1"
+                android:text="@string/author"
+                android:textColor="@color/greenPrimary" />
+
+            <TextView
+                android:id="@+id/iconAuthor"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="top|center_horizontal"
+                android:layout_marginLeft="3dp"
+                android:layout_marginRight="3dp"
+                android:layout_marginBottom="21dp"
+                android:layout_weight="1"
+                android:text="@string/icon_author"
+                android:textColor="@color/greenPrimary" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -68,19 +84,20 @@
                     android:id="@+id/imageViewdirparent"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:adjustViewBounds="true"
-                    android:layout_weight="0"
-                    app:srcCompat="@drawable/dir_parent_focused"
+                    android:layout_gravity="top|left"
                     android:layout_marginRight="8dp"
-                    android:layout_gravity="top|left"/>
+                    android:layout_weight="0"
+                    android:adjustViewBounds="true"
+                    app:srcCompat="@drawable/dir_parent_focused" />
 
                 <TextView
                     android:id="@+id/textViewdirparent"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="top|left"
                     android:layout_weight="1"
                     android:text="@string/help_parentdir"
-                    android:layout_gravity="top|left"/>
+                    android:textColor="@color/greenPrimary" />
             </LinearLayout>
 
             <LinearLayout
@@ -93,19 +110,20 @@
                     android:id="@+id/imageViewdoc"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:adjustViewBounds="true"
-                    android:layout_weight="0"
-                    app:srcCompat="@drawable/doc_focused"
+                    android:layout_gravity="top|left"
                     android:layout_marginRight="8dp"
-                    android:layout_gravity="top|left"/>
+                    android:layout_weight="0"
+                    android:adjustViewBounds="true"
+                    app:srcCompat="@drawable/doc_focused" />
 
                 <TextView
                     android:id="@+id/textViewdoc"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="top|left"
                     android:layout_weight="1"
                     android:text="@string/help_newdoc"
-                    android:layout_gravity="top|left"/>
+                    android:textColor="@color/greenPrimary" />
             </LinearLayout>
 
             <LinearLayout
@@ -118,19 +136,20 @@
                     android:id="@+id/imageViewdir"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:adjustViewBounds="true"
-                    android:layout_weight="0"
-                    app:srcCompat="@drawable/dir_focused"
+                    android:layout_gravity="top|left"
                     android:layout_marginRight="8dp"
-                    android:layout_gravity="top|left"/>
+                    android:layout_weight="0"
+                    android:adjustViewBounds="true"
+                    app:srcCompat="@drawable/dir_new_focused" />
 
                 <TextView
                     android:id="@+id/textViewdir"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="top|left"
                     android:layout_weight="1"
                     android:text="@string/help_newdir"
-                    android:layout_gravity="top|left"/>
+                    android:textColor="@color/greenPrimary" />
             </LinearLayout>
 
             <LinearLayout
@@ -143,19 +162,20 @@
                     android:id="@+id/imageViewtabs"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:adjustViewBounds="true"
-                    android:layout_weight="0"
-                    app:srcCompat="@drawable/tabs_focused"
+                    android:layout_gravity="top|left"
                     android:layout_marginRight="8dp"
-                    android:layout_gravity="top|left"/>
+                    android:layout_weight="0"
+                    android:adjustViewBounds="true"
+                    app:srcCompat="@drawable/tabs_focused" />
 
                 <TextView
                     android:id="@+id/textViewtabs"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="top|left"
                     android:layout_weight="1"
                     android:text="@string/help_tabs"
-                    android:layout_gravity="top|left"/>
+                    android:textColor="@color/greenPrimary" />
             </LinearLayout>
 
             <LinearLayout
@@ -168,19 +188,20 @@
                     android:id="@+id/imageViewx"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:adjustViewBounds="true"
-                    android:layout_weight="0"
-                    app:srcCompat="@drawable/x_focused"
+                    android:layout_gravity="top|left"
                     android:layout_marginRight="8dp"
-                    android:layout_gravity="top|left"/>
+                    android:layout_weight="0"
+                    android:adjustViewBounds="true"
+                    app:srcCompat="@drawable/x_focused" />
 
                 <TextView
                     android:id="@+id/textViewx"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="top|left"
                     android:layout_weight="1"
                     android:text="@string/help_browseclose"
-                    android:layout_gravity="top|left"/>
+                    android:textColor="@color/greenPrimary" />
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
