--- a/app/src/main/res/layout/help_editor.xml
+++ b/app/src/main/res/layout/help_editor.xml
@@ -18,45 +18,60 @@
                 android:id="@+id/apptitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="top|center_horizontal"
+                android:layout_marginLeft="3dp"
+                android:layout_marginRight="3dp"
                 android:layout_weight="1"
                 android:text="@string/app_name"
-                android:layout_gravity="top|center_horizontal"
-                android:textSize="25sp"
-                android:layout_marginLeft="3dp"
-                android:layout_marginRight="3dp" />
+                android:textColor="@color/greenPrimary"
+                android:textSize="25sp" />
 
             <TextView
                 android:id="@+id/version"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="top|center_horizontal"
+                android:layout_marginLeft="3dp"
+                android:layout_marginRight="3dp"
                 android:layout_weight="1"
                 android:text="@string/version"
-                android:layout_gravity="top|center_horizontal"
-                android:layout_marginLeft="3dp"
-                android:layout_marginRight="3dp"/>
-
-            <TextView
-                android:id="@+id/author"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/author"
-                android:layout_gravity="top|center_horizontal"
-                android:layout_marginLeft="3dp"
-                android:layout_marginRight="3dp"/>
+                android:textColor="@color/greenPrimary" />
 
             <TextView
                 android:id="@+id/website"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="top|center_horizontal"
-                android:layout_marginBottom="21dp"
                 android:layout_marginLeft="3dp"
                 android:layout_marginRight="3dp"
                 android:layout_weight="1"
                 android:autoLink="web"
                 android:clickable="true"
-                android:text="http://1337atr.weebly.com" />
+                android:text="http://1337atr.weebly.com"
+                android:textColorLink="@color/greenAccent" />
+
+            <TextView
+                android:id="@+id/author"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="top|center_horizontal"
+                android:layout_marginLeft="3dp"
+                android:layout_marginRight="3dp"
+                android:layout_weight="1"
+                android:text="@string/author"
+                android:textColor="@color/greenPrimary" />
+
+            <TextView
+                android:id="@+id/iconAuthor"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="top|center_horizontal"
+                android:layout_marginLeft="3dp"
+                android:layout_marginRight="3dp"
+                android:layout_marginBottom="21dp"
+                android:layout_weight="1"
+                android:text="@string/icon_author"
+                android:textColor="@color/greenPrimary" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -78,9 +93,10 @@
                     android:id="@+id/textViewdoc"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="top|left"
                     android:layout_weight="1"
                     android:text="@string/help_newdoc"
-                    android:layout_gravity="top|left"/>
+                    android:textColor="@color/greenPrimary" />
             </LinearLayout>
 
             <LinearLayout
@@ -103,9 +119,10 @@
                     android:id="@+id/textViewdir"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="top|left"
                     android:layout_weight="1"
                     android:text="@string/help_opendoc"
-                    android:layout_gravity="top|left"/>
+                    android:textColor="@color/greenPrimary" />
             </LinearLayout>
 
             <LinearLayout
@@ -128,9 +145,10 @@
                     android:id="@+id/textViewsave"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="top|left"
                     android:layout_weight="1"
                     android:text="@string/help_savedoc"
-                    android:layout_gravity="top|left"/>
+                    android:textColor="@color/greenPrimary" />
             </LinearLayout>
 
             <LinearLayout
@@ -153,9 +171,10 @@
                     android:id="@+id/textViewsaveas"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="top|left"
                     android:layout_weight="1"
                     android:text="@string/help_saveas"
-                    android:layout_gravity="top|left"/>
+                    android:textColor="@color/greenPrimary" />
             </LinearLayout>
 
             <LinearLayout
@@ -178,9 +197,10 @@
                     android:id="@+id/textViewtabs"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="top|left"
                     android:layout_weight="1"
                     android:text="@string/help_tabs"
-                    android:layout_gravity="top|left"/>
+                    android:textColor="@color/greenPrimary" />
             </LinearLayout>
 
             <LinearLayout
@@ -203,9 +223,10 @@
                     android:id="@+id/textViewx"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="top|left"
                     android:layout_weight="1"
                     android:text="@string/help_editorclose"
-                    android:layout_gravity="top|left"/>
+                    android:textColor="@color/greenPrimary" />
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
