--- a/app/src/main/res/layout/help_tabs.xml
+++ b/app/src/main/res/layout/help_tabs.xml
@@ -18,55 +18,71 @@
                 android:id="@+id/apptitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="top|center_horizontal"
+                android:layout_marginLeft="3dp"
+                android:layout_marginRight="3dp"
                 android:layout_weight="1"
                 android:text="@string/app_name"
-                android:layout_gravity="top|center_horizontal"
-                android:textSize="25sp"
-                android:layout_marginLeft="3dp"
-                android:layout_marginRight="3dp"/>
+                android:textColor="@color/greenPrimary"
+                android:textSize="25sp" />
 
             <TextView
                 android:id="@+id/version"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="top|center_horizontal"
+                android:layout_marginLeft="3dp"
+                android:layout_marginRight="3dp"
                 android:layout_weight="1"
                 android:text="@string/version"
-                android:layout_gravity="top|center_horizontal"
-                android:layout_marginLeft="3dp"
-                android:layout_marginRight="3dp"/>
-
-            <TextView
-                android:id="@+id/author"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/author"
-                android:layout_gravity="top|center_horizontal"
-                android:layout_marginLeft="3dp"
-                android:layout_marginRight="3dp"/>
+                android:textColor="@color/greenPrimary" />
 
             <TextView
                 android:id="@+id/website"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="top|center_horizontal"
-                android:layout_marginBottom="21dp"
                 android:layout_marginLeft="3dp"
                 android:layout_marginRight="3dp"
                 android:layout_weight="1"
                 android:autoLink="web"
                 android:clickable="true"
-                android:text="http://1337atr.weebly.com" />
+                android:text="http://1337atr.weebly.com"
+                android:textColorLink="@color/greenAccent" />
+
+            <TextView
+                android:id="@+id/author"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="top|center_horizontal"
+                android:layout_marginLeft="3dp"
+                android:layout_marginRight="3dp"
+                android:layout_weight="1"
+                android:text="@string/author"
+                android:textColor="@color/greenPrimary" />
+
+            <TextView
+                android:id="@+id/iconAuthor"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="top|center_horizontal"
+                android:layout_marginLeft="3dp"
+                android:layout_marginRight="3dp"
+                android:layout_marginBottom="21dp"
+                android:layout_weight="1"
+                android:text="@string/icon_author"
+                android:textColor="@color/greenPrimary" />
 
             <TextView
                 android:id="@+id/textViewSwipe"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/help_tabswipe"
                 android:layout_gravity="top|left"
+                android:layout_marginBottom="21dp"
+                android:layout_weight="1"
                 android:padding="3dp"
-                android:layout_marginBottom="21dp"/>
+                android:text="@string/help_tabswipe"
+                android:textColor="@color/greenPrimary" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -88,9 +104,10 @@
                     android:id="@+id/textViewx"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="top|left"
                     android:layout_weight="1"
                     android:text="@string/help_tabclose"
-                    android:layout_gravity="top|left"/>
+                    android:textColor="@color/greenPrimary" />
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
