--- a/app/src/main/res/layout/whats_new.xml
+++ b/app/src/main/res/layout/whats_new.xml
@@ -53,6 +53,96 @@
             android:layout_marginBottom="21dp"
             android:text="http://1337atr.weebly.com" />
 
+        <TextView
+            android:id="@+id/221"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top|left"
+            android:layout_marginBottom="6dp"
+            android:layout_weight="1"
+            android:padding="3dp"
+            android:text="Version 2.2.1:" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:padding="3dp">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="top|left"
+                android:layout_marginRight="8dp"
+                android:layout_weight="0"
+                android:adjustViewBounds="true"
+                app:srcCompat="@drawable/bulletpoint" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="top|left"
+                android:layout_weight="1"
+                android:text="Fixed a crash for devices in which the 'external' storage medium is not mounted." />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:padding="3dp">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="top|left"
+                android:layout_marginRight="8dp"
+                android:layout_weight="0"
+                android:adjustViewBounds="true"
+                app:srcCompat="@drawable/bulletpoint" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="top|left"
+                android:layout_weight="1"
+                android:text="Changed the save as hotkey from ctrl+alt+s to ctrl+shift+s." />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:padding="3dp">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="top|left"
+                android:layout_marginRight="8dp"
+                android:layout_weight="0"
+                android:adjustViewBounds="true"
+                app:srcCompat="@drawable/bulletpoint" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="top|left"
+                android:layout_weight="1"
+                android:text="Updated the Editor help dialog to reflect save and save as hotkeys." />
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/220"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top|left"
+            android:layout_marginBottom="8dp"
+            android:layout_marginTop="6dp"
+            android:layout_weight="1"
+            android:padding="3dp"
+            android:text="Version 2.2.0:" />
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
