--- a/app/src/main/res/layout/help_tabs.xml
+++ b/app/src/main/res/layout/help_tabs.xml
@@ -1,91 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/textViewSwipe"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top|left"
+            android:layout_marginBottom="21dp"
+            android:layout_weight="1"
+            android:padding="3dp"
+            android:text="@string/help_tabswipe" />
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="horizontal"
+            android:padding="3dp">
 
-            <TextView
-                android:id="@+id/apptitle"
+            <ImageView
+                android:id="@+id/imageViewx"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="top|center_horizontal"
-                android:layout_marginLeft="3dp"
-                android:layout_marginRight="3dp"
-                android:layout_weight="1"
-                android:text="@string/app_name"
-                android:textSize="25sp" />
+                android:adjustViewBounds="true"
+                android:layout_weight="0"
+                app:srcCompat="@drawable/back"
+                android:layout_marginRight="8dp"
+                android:layout_gravity="top|left"/>
 
             <TextView
-                android:id="@+id/version"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="top|center_horizontal"
-                android:layout_marginLeft="3dp"
-                android:layout_marginRight="3dp"
-                android:layout_weight="1"
-                android:text="@string/version" />
-
-            <TextView
-                android:id="@+id/author"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="top|center_horizontal"
-                android:layout_marginLeft="3dp"
-                android:layout_marginRight="3dp"
-                android:layout_weight="1"
-                android:text="@string/author" />
-
-            <TextView
-                android:id="@+id/website"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="top|center_horizontal"
-                android:layout_marginLeft="3dp"
-                android:layout_marginRight="3dp"
-                android:layout_weight="1"
-                android:autoLink="web"
-                android:clickable="true"
-                android:layout_marginBottom="21dp"
-                android:text="http://1337atr.weebly.com" />
-
-            <TextView
-                android:id="@+id/textViewSwipe"
+                android:id="@+id/textViewx"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="top|left"
-                android:layout_marginBottom="21dp"
                 android:layout_weight="1"
-                android:padding="3dp"
-                android:text="@string/help_tabswipe" />
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:padding="3dp">
-
-                <ImageView
-                    android:id="@+id/imageViewx"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:adjustViewBounds="true"
-                    android:layout_weight="0"
-                    app:srcCompat="@drawable/back"
-                    android:layout_marginRight="8dp"
-                    android:layout_gravity="top|left"/>
-
-                <TextView
-                    android:id="@+id/textViewx"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="top|left"
-                    android:layout_weight="1"
-                    android:text="@string/help_tabclose" />
-            </LinearLayout>
+                android:text="@string/help_tabclose" />
         </LinearLayout>
-</ScrollView>
+</LinearLayout>
