Switching button text size in settings menu to dp.

--- a/app/src/main/res/layout/settings_global.xml
+++ b/app/src/main/res/layout/settings_global.xml
@@ -76,6 +76,7 @@
                     android:ellipsize="end"
                     android:singleLine="true"
                     android:text="@string/settings_local_button"
+                    android:textSize="16dp"
                     app:layout_constraintHorizontal_chainStyle="packed"
                     app:layout_constraintBottom_toTopOf="@+id/settingsLayout"
                     app:layout_constraintLeft_toLeftOf="parent"
@@ -105,6 +106,7 @@
                     android:ellipsize="end"
                     android:singleLine="true"
                     android:text="@string/help"
+                    android:textSize="16dp"
                     app:layout_constraintBottom_toTopOf="@+id/settingsLayout"
                     app:layout_constraintLeft_toRightOf="@+id/spacer"
                     app:layout_constraintRight_toRightOf="parent"
@@ -176,6 +178,7 @@
                         android:ellipsize="end"
                         android:singleLine="true"
                         android:text="@string/browse"
+                        android:textSize="16dp"
                         app:layout_constraintBottom_toTopOf="@+id/fontLabel"
                         app:layout_constraintLeft_toRightOf="@+id/startupScroll"
                         app:layout_constraintRight_toRightOf="parent"
@@ -202,6 +205,7 @@
                         android:ellipsize="end"
                         android:singleLine="true"
                         android:text="@string/browse"
+                        android:textSize="16dp"
                         app:layout_constraintBottom_toTopOf="@+id/textDirLabel"
                         app:layout_constraintLeft_toLeftOf="parent"
                         app:layout_constraintRight_toRightOf="parent"
@@ -285,6 +289,7 @@
                         android:ellipsize="end"
                         android:singleLine="true"
                         android:text="@string/browse"
+                        android:textSize="16dp"
                         app:layout_constraintBottom_toTopOf="@+id/wordWrap"
                         app:layout_constraintLeft_toLeftOf="parent"
                         app:layout_constraintRight_toRightOf="parent"
@@ -356,6 +361,7 @@
                         android:ellipsize="end"
                         android:singleLine="true"
                         android:text="@string/cancel"
+                        android:textSize="16dp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintHorizontal_bias="1"
                         app:layout_constraintHorizontal_chainStyle="packed"
@@ -371,6 +377,7 @@
                         android:ellipsize="end"
                         android:singleLine="true"
                         android:text="@string/save"
+                        android:textSize="16dp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintLeft_toRightOf="@+id/cancelButton"
                         app:layout_constraintRight_toRightOf="parent"
@@ -441,6 +448,7 @@
                     android:ellipsize="end"
                     android:singleLine="true"
                     android:text="@string/settings_global_button"
+                    android:textSize="16dp"
                     app:layout_constraintBottom_toTopOf="@+id/localSettingsLayout"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toLeftOf="@+id/localSpacer"
@@ -469,6 +477,7 @@
                     android:ellipsize="end"
                     android:singleLine="true"
                     android:text="@string/help"
+                    android:textSize="16dp"
                     app:layout_constraintBottom_toTopOf="@+id/localSettingsLayout"
                     app:layout_constraintLeft_toRightOf="@+id/localSpacer"
                     app:layout_constraintRight_toRightOf="parent"
@@ -506,6 +515,7 @@
                         android:ellipsize="end"
                         android:singleLine="true"
                         android:text="@string/browse"
+                        android:textSize="16dp"
                         app:layout_constraintBottom_toTopOf="@+id/localWordWrapLabel"
                         app:layout_constraintLeft_toLeftOf="parent"
                         app:layout_constraintRight_toRightOf="parent"
@@ -624,6 +634,7 @@
                         android:ellipsize="end"
                         android:singleLine="true"
                         android:text="@string/cancel"
+                        android:textSize="16dp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintHorizontal_bias="1"
                         app:layout_constraintHorizontal_chainStyle="packed"
@@ -639,6 +650,7 @@
                         android:ellipsize="end"
                         android:singleLine="true"
                         android:text="@string/save"
+                        android:textSize="16dp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintLeft_toRightOf="@+id/localCancelButton"
                         app:layout_constraintRight_toRightOf="parent"
