--- a/app/src/main/res/layout/settings_global.xml
+++ b/app/src/main/res/layout/settings_global.xml
@@ -274,7 +274,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
                         android:paddingLeft="24dp"
-                        app:layout_constraintBottom_toTopOf="@+id/editorLabel"
+                        app:layout_constraintBottom_toTopOf="@+id/enableRoot"
                         app:layout_constraintHorizontal_bias="0"
                         app:layout_constraintLeft_toLeftOf="parent"
                         app:layout_constraintRight_toRightOf="parent"
@@ -298,6 +298,20 @@
                             android:textSize="16dp" />
                     </RadioGroup>
 
+                    <CheckBox
+                        android:id="@+id/enableRoot"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="24dp"
+                        android:layout_marginTop="10dp"
+                        android:text="@string/enableroot"
+                        android:textSize="16dp"
+                        app:layout_constraintBottom_toTopOf="@+id/editorLabel"
+                        app:layout_constraintHorizontal_bias="0"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintRight_toRightOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/aobGroup" />
+
                     <TextView
                         android:id="@+id/editorLabel"
                         android:layout_width="wrap_content"
@@ -310,7 +324,7 @@
                         app:layout_constraintHorizontal_bias="0"
                         app:layout_constraintLeft_toLeftOf="parent"
                         app:layout_constraintRight_toRightOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/aobGroup" />
+                        app:layout_constraintTop_toBottomOf="@+id/enableRoot" />
 
                     <TextView
                         android:id="@+id/editorFontLabel"
